Fix stacking with `z-index`

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	z-index: 2;
 }
 
 .image-container::before {
@@ -23,7 +24,7 @@
 }
 
 img {
-	transform: translate(0, 0);
+	z-index: 1;
 }
 
 @keyframes keep-sliding {
